--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
             color: "white",
           });
           $("a").css({
-            color: "yellow",
+            color: "#ffdc2a",
           });
         }
         i++;
