--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <!-- 从百度cdn引用JQ -->
     <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <style type="text/css">
+      *{
+        font-family: "SDK_SC_Web";
+      }
       body {
         display: flex;
         flex-direction: column;
