--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <style type="text/css">
       @font-face {
         font-family: "SDK_SC_Web";
-        src: url(".\zh-cn.ttf")
-          format("truetype");
+        src: url(".\zh-cn.ttf") format("truetype");
       }
       * {
         font-family: "SDK_SC_Web";
@@ -279,17 +278,18 @@
       let dayNight = document.querySelector("#circle");
       let msg1 = document.querySelectorAll(".info");
       let msg2 = document.querySelectorAll(".info2");
+      let funTxt = document.querySelector("#circFunction")
       let i = 1;
       /* 通过i是否能被2整除判定点击次数以调整主题 */
       dayNight.addEventListener("click", function () {
         if (i % 2 == 0) {
+          $(".info").css({
+            backgroundColor: "rgba(255, 255, 255, 0.6)",
+          });
           /* 切换至暗色主题 */
-          for (let j = 0; j < msg1.length; j++) {
-            msg1[j].style.backgroundColor = "rgba(255, 255, 255, 0.6)";
-          }
-          for (let j = 0; j < msg2.length; j++) {
-            msg2[j].style.backgroundColor = "rgba(255, 255, 255, 0.6)";
-          }
+          $(".info2").css({
+            backgroundColor: "rgba(255, 255, 255, 0.6)",
+          });
           /* 已经...变成jq的形状了... */
           $("h2").css({
             color: "black",
@@ -304,14 +304,16 @@
           $("a").css({
             color: "blue",
           });
+          funTxt.textContent = "切换至夜间主题"
         } else {
           /* 切换回明色主题 */
-          for (let j = 0; j < msg1.length; j++) {
-            msg1[j].style.backgroundColor = "rgba(0, 0, 0, 0.6)";
-          }
-          for (let j = 0; j < msg2.length; j++) {
-            msg2[j].style.backgroundColor = "rgba(0, 0, 0, 0.6)";
-          }
+          $(".info").css({
+            backgroundColor: "rgba(0, 0, 0, 0.6)",
+          });
+          /* 切换至暗色主题 */
+          $(".info2").css({
+            backgroundColor: "rgba(0, 0, 0, 0.6)",
+          });
           $("h2").css({
             color: "white",
           });
@@ -325,6 +327,7 @@
             color: "#58ff00",
           });
         }
+        funTxt.textContent = "切换至日间主题==>"
         i++;
         console.log(i);
       });
