--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       </div>
 
       <div id="links">
-        <a href="https://github.com/rishabhp/bideo.js">View on Github</a>
+        <a href="\bf1-webtool\index.html">View on Github</a>
         <a href="http://codetheory.in/html5-fullscreen-background-video/">How it works</a>
       </div>
     </section>
