--- a/index.html
+++ b/index.html
@@ -166,13 +166,13 @@
 
     <section id="main_content">
       <div id="head">
-        <h1>Bideo.js</h1>
-        <p class="sub_head">A JS library that makes it super easy to add fullscreen background videos.</p>
-        <p class="info">(Hold on! The video might take a while to load.)</p>
+        <h1>Jerry的主页</h1>
+        <p class="sub_head">所有我制作的开源项目都在此展示，您可点击对应项查看预览效果</p>
+        <p class="info">（稍安勿躁，这个背景视频需要一段时间加载）</p>
       </div>
 
       <div id="links">
-        <a href="\bf1-webtool\index.html">View on Github</a>
+        <a href=".\bf1-webtool\index.html">战地1网页工具模板</a>
         <a href="http://codetheory.in/html5-fullscreen-background-video/">How it works</a>
       </div>
     </section>
