--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
   </div>
 
   <div id="footer">
-    <a href="http://twitter.com/_rishabhp">Follow on Twitter</a>
+    <a href="https://space.bilibili.com/57439297">Follow on BiliBili 在哔哩哔哩关注我</a>
 
-    <a href="https://twitter.com/share" class="twitter-share-button" data-via="_rishabhp">Tweet</a>
+<!--     <a href="https://twitter.com/share" class="twitter-share-button" data-via="_rishabhp">Tweet</a> -->
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
     <a href="https://www.youtube.com/watch?v=w7JrHIHi8t0" target="_blank">
