--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
+<!-- Special Thanks The Author of "bideo.js" and This Opensource Project. You helped me a lot about build this page -->
+<!-- 特别鸣谢 "bideo.js" 开源项目及其作者，这对我构建此页面帮助很大 -->
 <html>
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <title>Easy Fullscreen HTML5 Background Video</title>
+  <title>Jerry's HomePage</title>
   <meta name="keywords" content="css3, html5, js, background video, fullscreen video">
   <meta name="description" content="Super easy to implement HTML5 fullscreen background video library in JavaScript.">
 
@@ -167,7 +169,7 @@
 
     <section id="main_content">
       <div id="head">
-        <h1>Jerry的主页</h1>
+        <h1>这里是Jerry的主页</h1>
         <p class="sub_head">所有我制作的开源项目都在此展示，您可点击对应项查看预览效果</p>
         <p class="info">（稍安勿躁，这个背景视频需要一段时间加载）</p>
       </div>
@@ -182,7 +184,7 @@
   <div id="footer">
     <a href="https://space.bilibili.com/57439297">Follow on BiliBili 在哔哩哔哩关注我</a>
 
-<!--     <a href="https://twitter.com/share" class="twitter-share-button" data-via="_rishabhp">Tweet</a> -->
+    <a href="https://github.com/rishabhp/bideo.js">Special Thanks The Author of "bideo.js" and This Opensource Project || 特别鸣谢 "bideo.js" 的作者及此开源项目</a> 
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
     <a href="https://www.youtube.com/watch?v=w7JrHIHi8t0" target="_blank">
