--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
   </div>
 
   <div id="footer">
-    <a href="https://space.bilibili.com/57439297">Follow on BiliBili 在哔哩哔哩关注我</a>
+    <a href="https://space.bilibili.com/57439297">Follow me on BiliBili 在哔哩哔哩关注我</a>
 
     <a href="https://github.com/rishabhp/bideo.js">Special Thanks The Author of "bideo.js" and This Opensource Project || 特别鸣谢 "bideo.js" 的作者及此开源项目</a> 
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
