--- a/index.html
+++ b/index.html
@@ -175,8 +175,11 @@
       </div>
 
       <div id="links">
-        <a href=".\bf1-webtool\index.html">战地1网页工具模板</a>
-        <a href="http://codetheory.in/html5-fullscreen-background-video/">How it works</a>
+        <a link="https://github.com/Jerry114514">My Github HomePage || 我的Github主页</a>
+        <br>
+        <br>
+        <a href=".\bf1-webtool\index.html">bf1-webtool-template || 战地1网页工具模板</a>
+        <a href=".\bf1-web-wiki\index.html">战地1网页百科全书（制作中）</a>
       </div>
     </section>
   </div>
