wiki首页样式表

--- a/bf1-web-wiki/index.html
+++ b/bf1-web-wiki/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>战地1网页百科全书（试做）</title>
     <script type="module" src="./typename.js"></script>
+    <link href="./index.css" rel="stylesheet">
   </head>
   <body>
     <h1 id="title">战地风云1 网页百科全书</h1>
-    <br />
     <br />
     <div id="select">
       <div id="home" class="func">首页</div>
@@ -17,8 +17,8 @@
       <div id="maps" class="func">地图</div>
       <div id="other" class="func">其他</div>
     </div>
+    <hr>
   </body>
   <script type="module" src="./print.js">
-    import { weaponType } from './typename.js';
   </script>
 </html>
