--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <br>
         <a href=".\bf1-webtool\index.html">bf1-webtool-template || 战地1网页工具模板</a>
         <a href=".\bf1-web-wiki\index.html">战地1网页百科全书（制作中）</a>
-        <a href=“.\BF1CHS\bf1chs-index.html”>战地1 简体中文</a>
+        <a href=".\BF1CHS\bf1chs-index.html">战地1 简体中文</a>
       </div>
     </section>
   </div>
