--- a/BF1CHS/bf1chs-index.html
+++ b/BF1CHS/bf1chs-index.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <title>战地风云1 简体中文项目介绍页</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-    <link
-      href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.3.1/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+    <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.3.1/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.3.1/js/bootstrap.min.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.3.1/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.7.1/jquery.js"></script>
     <title>Document</title>
     <style>
+        * {
+            font-family: "FuturaMaxiBook-SC";
+        }
+
         *,
         *::before,
         *::after {
@@ -38,6 +38,7 @@
         }
 
         main {
+            background-color: rgba(255, 255, 255, 0.5);
             scroll-snap-type: y mandatory;
             overflow: scroll;
             height: 100vh;
@@ -47,31 +48,111 @@
             width: 100vw;
             height: 100vh;
             scroll-snap-align: center;
+            align-items: center;
         }
-        #filt{
+
+        #filt {
             backdrop-filter: blur(5px);
         }
-        
+
+        .bfname {
+            font-size: 40px;
+        }
+
+        .bfname1 {
+            font-size: 40px;
+        }
+
+        #intro {
+            font-size: 60px;
+            font-weight: 1000;
+        }
+        .vid{
+            width: 400px;
+            height: 200px;
+        }
     </style>
 </head>
 
-<body background="C:\Users\37420\Documents\GitHub\Jerry114514.github.io\BF1CHS\img\bf1-bg.jpg">
+<body background="./img/bf1-bg.jpg">
     <div id="filt">
         <main>
+
             <section class="container" id="title">
-                <div id="">
-                    <h1>戰地風雲 1</h1>
+                <div width="100%">
+                    <br><br><br><br>
+                    <h1 align="center" id="intro">欢迎来到 《战地风云 1》 简体中文项目页</h1>
+                    <h1 align="center">项目内容预览</h2>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <div class="row text-center">
+                            <div class="col-md-4 bfname">
+                                <iframe class="vid"
+                                    src="//player.bilibili.com/player.html?aid=1600787184&bvid=BV1a2421F7di&cid=1447561977&p=1"
+                                    scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true">
+                                </iframe>
+                                <br>
+                                <h2>行动模式战役信息及地名</h2>
+                            </div>
+                            <div class="col-md-4 bfname">
+                                <iframe class="vid"
+                                    src="//player.bilibili.com/player.html?aid=1050030579&bvid=BV1CH4y1e7cm&cid=1429225546&p=1"
+                                    scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true">
+                                </iframe>
+                                <br>
+                                <h2>士兵自定义页面</h2>
+                            </div>
+                            <div class="col-md-4 bfname">
+                                <iframe class="vid"
+                                    src="//player.bilibili.com/player.html?aid=1050544560&bvid=BV1oH4y1h7dJ&cid=1439545088&p=1"
+                                    scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true">
+                                </iframe>
+                                <br>
+                                <h2>游戏设置项</h2>
+                            </div>
+                        </div>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <div class="row text-center">
+                            <div class="col-md-4 bfname"></div>
+                            <div class="col-md-4 bfname1"></div>
+                            <div class="col-md-4 bfname"></div>
+                        </div>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <div class="row text-center">
+                            <div class="col-md-2 bfname"></div>
+                            <div class="col-md-8 bfname">——— 做最优质的战地翻译 ——</div>
+                            <div class="col-md-2 bfname"></div>
+                        </div>
                 </div>
-                
+
             </section>
-            <section class="container">2</section>
-            <section class="container">3</section>
-            <section class="container">4</section>
+            <section class="container" align="center">
+                <br><br><br><br>
+                    <h1 align="center" id="intro">项目概览</h1>
+                    <h1 align="center">致所有使用此项目的玩家们</h1>    
+                    <h3>
+                        我们是一群热爱《战地风云》的玩家，汉化项目由我们发起、推动、落地、推广、完成。<br>
+                        我们希望《战地风云 1》的玩家们也能享受到简体中文，这是我们的权利，也是献给所有士兵们的礼物。<br>
+                    </h3>
+                    <br><br><br><br>
+                    <h1>拒绝“弓箭损坏”</h1>
+                    <h4>
+                        我们不希望出现任何可能导致误解的错译，如“弓箭损坏”，“电梯损坏”，<br>
+                        因此，我们尽可能将整个游戏的文本重新翻译了一遍。<br>
+                        在此之上，我们也对部分文本重新翻译，使观感更佳，更接地气。<br>
+                    </h4>
+            </section>
+            <section class="container" align="center">3</section>
+            <section class="container" align="center">4</section>
         </main>
     </div>
 </body>
-<script>
-
-</script>
-
 </html>
